# vinacomp

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  manual_testing.todo  package.json  tags  vinacomp.pro  vinacomp.todo  webpack.config.js
config/: config.pro
gui/: gui.pro
gui/includes/: action.hpp  combo_box.hpp  curve_editor.hpp  curve_key_frame.hpp  curve_view.hpp  gl_view.hpp  graphics_view.hpp  init_space.hpp  maker.hpp  node.hpp  node_finder.hpp  node_graph.hpp  node_link.hpp  panel.hpp  panels_layout.hpp  properties.hpp  script_editor.hpp  settings.hpp  splitter.hpp  time_line.hpp  tool_bar.hpp  tools.hpp  trim_panel.hpp  viewer.hpp  viewer_gl.hpp  vinacomp.hpp  vinacomp_namespace.hpp
gui/src/: action.cpp  combo_box.cpp  curve_editor.cpp  curve_key_frame.cpp  curve_view.cpp  curve_view_key_frames.cpp  curve_view_paint.cpp  curve_view_popup.cpp  curve_view_selector.cpp  curve_view_transform_box.cpp  gl_view.cpp  gl_view_paint.cpp  graphics_view.cpp  main.cpp  maker.cpp  node.cpp  node_finder.cpp  node_graph.cpp  node_graph_events.cpp  node_link.cpp  panel.cpp  panels_layout.cpp  properties.cpp  script_editor.cpp  settings.cpp  slider.cpp  splitter.cpp  time_line.cpp  tool_bar.cpp  tools.cpp  trim_panel.cpp  viewer.cpp  viewer_gl.cpp  vinacomp.cpp
modules/: app.py  engine_test.py  init.py  node_graph.py  nodes.py  params.py  vina.py
resources/app/: VinaComp.desktop  vinacomp.sh
resources/css/: style.css
resources/data/: all_layout.json  comp_layout.json  default_layout.json  layout.json  script_layout.json
scripts/: build.sh  clang-format.sh  install.sh  make_palette.py  setup.sh  svg_converter.sh
source/engine/: engine.pro
source/global/: global.h
source/gui/: gui.pro
source/ofx/: ofx_api.cc  ofx_api.h  ofx_image_effect_suite.cc  ofx_image_effect_suite.h  ofx_parameter_suite.cc  ofx_parameter_suite.h  ofx_property_suite.cc  ofx_property_suite.h
source/python_api/: py_app.cc  py_app.h  py_node_graph.cc  py_node_graph.h  py_nodes.cc  py_nodes.h  py_params.cc  py_params.h  python.h  python_api.h
stylesheet/: bases.sass  global.sass  main.sass  palette.json  palette.sass  variables.sass
stylesheet/components/: combo_box.sass  curve_editor.sass  file_dialog.sass  new_layer.sass  node_finder.sass  node_graph.sass  panel.sass  project_settings.sass  properties.sass  script_editor.sass  settings.sass  splitter.sass  tool_bar.sass  tools.sass  trim_panel.sass  viewer.sass
stylesheet/knobs/: knob_channels.sass  knob_check_box.sass  knob_color.sass  knob_group.sass  knob_shuffle.sass  knobs.sass  slider.sass  (+1 more)
(+548 files in other folders)
